2003-11-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnml.el (nnml-request-accept-article): pass sender to
	nnmail-cache-insert

	* nnmh.el (nnmh-request-accept-article): pass sender to
	nnmail-cache-insert 

	* nnmbox.el (nnmbox-request-accept-article): pass sender to
	nnmail-cache-insert 

	* nnfolder.el (nnfolder-request-accept-article): pass sender to
	nnmail-cache-insert 

	* nnbabyl.el (nnbabyl-request-accept-article): pass sender to
	nnmail-cache-insert 

	* nnmail.el (nnmail-cache-insert): accept sender parameter and
	pass it to the nnmail-spool-hook

	* gnus-registry.el (gnus-registry-track-extra): clarify doc
	(gnus-registry-action): add sender lexical var and pass it to
	gnus-registry-add-group
	(gnus-registry-spool-action): take a sender parameter, pass to
	gnus-registry-add-group
	(gnus-registry-split-fancy-with-parent): trace by sender in
	addition to subject
	(gnus-registry-fetch-sender-fast): new function
	(gnus-registry-add-group): accept sender parameter

2003-11-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-ham-copy-routine, spam-ham-move-routine)
	(spam-mark-spam-as-expired-and-move-routine): allow for the
	groups to be a list of a single item

	* gnus.el (gnus-install-group-spam-parameters):
	ham-process-destination and spam-process-destination allow lists now

2003-11-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-insert-to): Do error out when the user
	requested no Cc.  Don't insert empty To.  Can be added to
	`message-setup-hook' now.  From Sam Steingold <sds@gnu.org>.
	(message-mode-field-menu): Moved some entries, added
	`message-insert-wide-reply'.
	(message-change-subject): Fixed comment.

2003-11-10  Simon Josefsson  <jas@extundo.com>

	* pgg-def.el (pgg-encrypt-for-me): Change default from nil to t.

2003-11-09  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-gpg-encrypt-region): Cache passphrase under hex
	key id too (for decryption).
	(pgg-gpg-sign-region): Likewise.
